# joinmarket_analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml  pre-commit.yaml  test.yaml
src/joinmarket_analyzer/: __init__.py  api.py  cli.py  greedy.py  models.py  output.py  parser.py  solver.py
tests/: conftest.py
tests/e2e/: test_reference_transaction.py
tests/unit/: test_greedy.py  test_parser.py
