[project]
name = "joinmarket-analyzer"
version = "0.1.0"
description = "JoinMarket CoinJoin transaction analyzer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "JoinMarket contributors"}]
dependencies = [
    "loguru~=0.7",
    "pulp~=2.9",
    "pydantic~=2.8",
    "requests~=2.32",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.7",
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "mypy~=1.11",
    "types-requests~=2.32",
]

[project.scripts]
joinmarket-analyze = "joinmarket_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"joinmarket_analyzer" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "e2e: End-to-end tests involving network requests",
    "slow: Slow running tests",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = false
plugins = []
ignore_missing_imports = true
packages = ["joinmarket_analyzer"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
